--- a/css/style.css
+++ b/css/style.css
@@ -507,12 +507,13 @@ body.offcanvas {
       margin-bottom: 4em; } }
 
 .bac-about-us{
-  padding: 5em 10vw; }
+  padding: 3em 10vw; }
 
 
 .about-img-2,
 .services-img {
-  height: 60vh;
+  height: 75vh;
+  max-height: 700px;
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -572,14 +573,14 @@ h1.bac-heading-us{
   font-family: "brown-thin", "Overpass", sans-serif !important;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  color: #fdb824;
+  color: orange;
   margin-bottom: 0.7em;
   line-height: 1.1; }
 h2.bac-heading-us{
   font-family: "brown-thin", "Overpass", sans-serif !important;
   text-align: center;
   text-transform: uppercase;
-  color: #fdb824;
+  color: orange;
   font-size: 4vw;
   padding-bottom: 30px;
   overflow: hidden;
@@ -587,7 +588,7 @@ h2.bac-heading-us{
 
   h2.bac-heading-us:before,
   h2.bac-heading-us:after {
-    background-color: #fdb824;
+    background-color: orange;
     content: "";
     display: inline-block;
     height: 2px;
@@ -604,17 +605,19 @@ h2.bac-heading-us{
     margin-right: -50%;
   }
   .bac-about-us .about-desc ul{
-    border-left: 2px #fdb824 solid; }
+    margin-bottom: 4vh;
+    border-left: 2px orange solid; }
   .bac-about-us .about-desc li{
     list-style: none;
     text-align: justify;
     font-family: "futura-lt", "futura-pt", sans-serif;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 900;
-    padding-bottom: 15px;
+    padding-top: 15px;
+    padding-bottom: 10px;
   }
   .bac-about-us .about-desc li:before{
-    background-color: #fdb824;
+    background-color: orange;
     content: "";
     display: inline-block;
     height: 2px;
@@ -1686,7 +1689,12 @@ li.css a {
   font-weight: bolder;
   letter-spacing: 0.15em;
   color: #5bc0de; }
-
+  svg {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+  }
 .linked{
   padding: 0em;
   margin: 0 !important; }
