se agrega fuente futura LT para testear carga de fuente

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Overpass:200');
 @font-face {
+  font-family: "futura-lt";
+  src: url("../fonts/fuentes/FuturaLT-Book.ttf") format("truetype"); }
+@font-face {
   font-family: "futura-pt";
   src: url("../fonts/fuentes/FuturaPTBook.ttf") format("truetype");
   src: url("../fonts/fuentes/FuturaPTBook.otf") format("opentype"); }
@@ -37,7 +40,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #000;
-  font-family: "futura-pt", serif, sans-serif;
+  font-family: "futura-lt", "futura-pt", "overpass", sans-serif;
   font-weight: 400;
   margin: 0 0 30px 0; }
 
@@ -51,7 +54,7 @@ figure {
     margin: 20px auto 0px auto;
     color: #b3b3b3;
     font-style: italic;
-    font-family: "futura-pt", Arial, sans-serif; }
+    font-family: "futura-pt", "overpass", sans-serif; }
     @media screen and (max-width: 480px) {
       figure figcaption {
         width: 100%; } }
@@ -509,7 +512,6 @@ body.offcanvas {
 .bac-about-us{
   padding: 3em 10vw; }
 
-
 .about-img-2,
 .services-img {
   height: 75vh;
@@ -610,7 +612,7 @@ h2.bac-heading-us{
   .bac-about-us .about-desc li{
     list-style: none;
     text-align: justify;
-    font-family: "futura-lt", "futura-pt", sans-serif;
+    font-family: "futura-lt", "overpass", sans-serif;
     font-size: 24px;
     font-weight: 900;
     padding-top: 15px;
@@ -735,7 +737,7 @@ h2.bac-heading-us{
   border: none; }
 
 .panel-heading a:after {
-  font-family: "futura-pt" !important;
+  font-family: "futura-pt", "overpass" !important;
   content: "\ea0e";
   position: absolute;
   right: 20px;
@@ -818,6 +820,7 @@ h2.bac-heading-us{
           font-size: 40px; } }
   .bac-feature .bac-text {
     padding-left: 120px;
+    font-family: "futura-lt", "overpass", serif;
     width: 100%; }
     .bac-feature .bac-text h2, .bac-feature .bac-text h3 {
       margin: 0;
@@ -989,7 +992,7 @@ h2.bac-heading-us{
     .project .desc h3 {
       font-size: 22px;
       font-weight: 500;
-      font-family: "futura-pt", monospace, Arial !important;
+      font-family: "futura-pt", "overpass", monospace !important;
       text-transform: uppercase;
       text-decoration: underline;
       letter-spacing: 1px;
@@ -1007,7 +1010,7 @@ h2.bac-heading-us{
     .project .desc span {
       display: block;
       color: #ccc;
-      font-family: "futura-pt", Helvetica;
+      font-family: "futura-pt", "overpass", Helvetica;
       font-size: 17px;
       text-align: justify;
       -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
@@ -1108,7 +1111,7 @@ h2.bac-heading-us{
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "futura-pt", sans-serif !important;
+    font-family: "futura-pt", "overpass", serif !important;
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1161,7 +1164,7 @@ h2.bac-heading-us{
     font-size: 40px;
     display: block;
     color: white;
-    font-family: "futura-pt", Arial, sans-serif !important;
+    font-family: "futura-pt", "overpass", sans-serif !important;
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
@@ -1567,7 +1570,7 @@ h2.bac-heading-us{
   padding: 20px 3vw !important; }
   #quienes p{
     font-size: 1.4em;
-    font-family: "futura-pt", Helvetica !important; }
+    font-family: "futura-pt", "overpass", Helvetica !important; }
   @media screen and (max-width: 1300px){
     #quienes{
       padding: 20px 1vw !important;
