--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @font-face {
   font-family: "futura-lt";
   src: url("../fonts/fuentes/FuturaLT-Book.ttf") format("truetype"); }
+
 @font-face {
   font-family: "brown-thin";
   src: url("../fonts/fuentes/brown-thin-webfont.ttf") format("truetype");  }
@@ -11,8 +12,6 @@
   src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
-
-
 
 body {
   font-weight: 400;
@@ -114,28 +113,27 @@ figure {
     width: 100%; }
   #bac-aside #bac-logo img{
     min-width: 130px !important;
-    width: 75% !important; }
+    width: 65% !important; }
   #bac-aside .comunicate{
     margin-bottom: 25px; }
   #bac-aside .comunicate .telcom{
-    letter-spacing:1px;
+    letter-spacing:0.5px;
+    font-family: "brown-thin";
     color:white;
-    width:75%;
-    min-width: 145px;
-    padding: 8px !important; }
+    width:55%;
+    min-width: 130px;
+    padding: 5px !important; }
     #bac-aside .comunicate .telcom:hover,
     #bac-aside .comunicate .mailcom:hover{
       background-color: #0386B2 !important; }
   #bac-aside .comunicate .mailcom{
-    letter-spacing:1px;
+    letter-spacing:0.5px;
+    font-family: "brown-thin";
     margin-top: 10px;
-    color:white;
-    width:75%;
-    min-width: 145px;
-    padding: 8px !important; }
-  /* @media screen and (max-width: 768px) {
-    #bac-aside #bac-logo {
-      margin-bottom: 7em; } } */
+    color: white;
+    width: 55%;
+    min-width: 130px;
+    padding: 5px !important; }
   #bac-aside #bac-logo a {
     display: block;
     text-align: left;
@@ -214,7 +212,7 @@ figure {
     bottom: 40px;
     right: 0;
     left: 1em;
-    font-size: 15px;
+    font-size: 13px;
     text-align: left;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.3);
@@ -250,8 +248,8 @@ figure {
         list-style: none; }
       #get-in-touch .bac-footer ul li a{
         letter-spacing: 15px; }
-      #bac-aside .bac-footer ul {
-        display: none; } }
+      }
+
     #bac-aside .bac-footer span {
       display: block; }
     #bac-aside .bac-footer ul {
@@ -265,12 +263,13 @@ figure {
         #bac-aside .bac-footer ul li a {
           color: rgba(136, 204, 241, 0.8);
           font-size: 20px;
-          letter-spacing: 10px;
+          letter-spacing: 12px;
           /* iconos de Menu */
           padding: 0; }
           #bac-aside .bac-footer ul li a:hover, #bac-aside .bac-footer ul li a:active, #bac-aside .bac-footer ul li a:focus {
             text-decoration: none;
             outline: none;
+            margin: 0;
             color: #fdb824; }
 
 #bac-main {
@@ -477,11 +476,7 @@ body.offcanvas {
 .img-responsive{
   max-width: 100%;
   min-height:50px;
-  height: auto; }
-  @media screen and (max-width: 1200px) {
-    .img-responsive{
-      height: auto !important; } }
-
+  height:  !important; }
 .no-gutters {
   margin: 0;
   padding: 0; }
@@ -518,20 +513,20 @@ body.offcanvas {
   height: 74vh;
   margin-top: -30px;
   max-height: 800px;
+  background-image: url(../images/teambac.jpg);
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
   position: relative; }
+  @media screen and (max-width: 960px) {
+    .about-img-2{
+      background-image: url(../images/team-bac.jpg); } }
+  @media screen and (max-width: 760px) {
+    .about-img-2{
+      margin-top: 60px;
+      height: 40vh; } }
 
-.about-img{
-  height: 500px;
-  margin-bottom: 5em;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat; }
-  @media screen and (max-width: 400px) {
-    .show-img{
-      display: none;} }
+
 
 
 .bac-heading {
@@ -558,24 +553,6 @@ body.offcanvas {
     .bac-heading {
       margin-bottom: 3em; } }
 
-/* .somos-r:after {
-  left: 0.1em;
-  margin-right: -50%;
-}
-.somos-l:before {
-  right: 0.5em;
-  margin-left: -50%;
-}
-.somos-l:before,
-.somos-r:after {
-  background-color: #fdb824;
-  content: "";
-  display: inline-block;
-  height: 2px;
-  position: relative;
-  vertical-align: super;
-  width: 28%;
-} */
 h1.bac-heading-us:before,
 h1.bac-heading-us:after {
   background-color: orange;
@@ -584,7 +561,7 @@ h1.bac-heading-us:after {
   height: 2px;
   position: relative;
   vertical-align: super;
-  width: 50%;
+  width: 40%;
 }
 h1.bac-heading-us:before {
   right: 0.1em;
@@ -604,9 +581,12 @@ h1.bac-heading-us{
   text-align: center;
   margin-bottom: 0.7em;
   line-height: 1.1; }
+  @media screen and (max-width: 1100px) {
+    h1.bac-heading-us{
+      font-size: 6em !important; } }
   @media screen and (max-width: 768px) {
     h1.bac-heading-us{
-      font-size: 5em !important; } }
+      font-size: 4em !important; } }
 h2.bac-heading-us{
   font-family: "brown-thin", "Overpass", sans-serif !important;
   text-align: center;
@@ -673,19 +653,35 @@ h2.bac-heading-us{
   font-weight: bolder;
   letter-spacing: 0.5em; }
 
-.about-img {
-  width: 100%;
-  height: 500px;
-  margin-bottom: 30px; }
-@media screen and (max-width: 1000px){
-  .bac-services .about-img{
-    display: none; } }
+.about-img{
+  height: 800px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  .bac-about .about-img {
+    height: 600px;
+    margin-top: 100px; }
+  @media screen and (max-width: 1000px){
+    .bac-about .about-img {
+      height: 400px;
+      background-position: top;
+      margin-top: 20px; }
+    .bac-services .about-img{
+      display: none; } }
+  @media screen and (max-width: 400px) {
+    .show-img{
+      display: none; } }
 
 .about-desc p {
   text-align: center;
   font-family: "Trebuchet MS", "overpass", sans-serif;
   line-height: 1.5;
   font-size: 1.4em; }
+  @media screen and (max-width: 768px) {
+    .about-desc p {
+      font-family: 'brown-thin';
+      font-weight: 900;
+      font-size: 1em !important; } }
 .about-desc h3 {
   font-size: 18px;
   text-transform: uppercase;
@@ -898,62 +894,77 @@ h2.bac-heading-us{
   height: 100%;
   width: 100%;
   padding: 0; }
-  .bac-projects .bac-narrow-content{
-    background-color: #447799; }
+.sideToSide{
+  margin: 0 !important;
+  padding: 0 !important; }
+  @media screen and (min-width: 768px) {
+    .switch{
+      display: none; } }
+  @media screen and (max-width: 768px) {
+    .bac-projects{
+      margin-top: 66px; }
+    .qwe{
+      height: 28vh !important; }
+    .asd{
+      height: 26vh !important; }
+    .switch{
+      display: block; }
+    .s-off{
+      display: none; }
+    .sideToSide{
+      height: 26vh; } }
+
+.projects-entry .centered {
+   position: absolute;
+   font-weight: 900;
+   letter-spacing: 3px;
+   font-size: 30px;
+   line-height: 1;
+   color: #FFFFFF;
+   top: 80%;
+   left: 40%;
+   transform: translate(-50%, -50%); }
+.up{
+  color: orange;
+  font-family: sans-serif;
+  line-height: 0;
+  font-weight: 900;
+  font-size: 2.2em;
+  letter-spacing: -4px; }
+.line {
+  display: inline-block;
+  position: relative; }
+.line::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 90px;
+  width: 140px;
+  border-bottom: 10px solid;
+  margin-top: 5px; }
+.line-2 {
+  display: inline-block;
+  position: relative; }
+.line-2::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 150px;
+  width: 130px;
+  border-bottom: 10px solid;
+  margin-top: 5px; }
+
+
 .projects-entry a{
-  border-radius: 30px;
-  /* background-image: url("/images/cat 1.jpg"); */
-  /* TODO: revisar esto para que quede bien. */
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
-  background-color: #000;
-  height: 33vh;
-  max-height: 33vh !important;
-  transform: skewx(-10deg);
-  margin-left: -5vw !important; }
+  background-color: #000; }
   .projects-entry a:hover{
     transition: .3s ease-in-out !important;
     filter: grayscale(0%);
     -webkit-filter: grayscale(0%); }
-.first-fix a{
-  max-height: 34vh !important; }
-.projects-entry a img{
-  min-height: 34vh !important;
-  height: auto;
-  width: 100%;
-  transform: skewX(10deg) !important;
-  left: 40px; }
-  .projects-entry .centered {
-    position: absolute;
-    font-weight: 600;
-    letter-spacing: 5px;
-    font-size: 2em;
-    color: #FFFFFF;
-    text-shadow: 2px 2px 0 #4074b5, 2px -2px 0 #4074b5, -2px 2px 0 #000,
-    -2px -2px 0 #4074b5, 2px 0px 0 #4074b5, 0px 2px 0 #4074b5, -2px 0px 0 #4074b5, 0px -2px 0 #4074b5;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-    @media screen and (max-width: 900px){
-      .projects-entry .centered {
-        left: 60vw; }
-    @media screen and (max-width: 770px){
-      .projects-entry .centered {
-        font-size: 1.7em;
-        left: 38%; } }
-        /* TODO: falta ver para 550px de width  */
-.sideToSide{
-  margin: 0 !important;
-  padding: 0 !important; }
-
-@media screen and (max-width: 900px){
-  .bac-projects .bac-narrow-content{
-    padding: 0 !important; }
-  .projects-entry a{
-    left: -120px;
-    width: 200vw !important; }
-  .sideToSide{
-    padding-top: 0 !important;}} }
 
 .bac-projects a img{
   height: 100vh; }
@@ -978,7 +989,6 @@ h2.bac-heading-us{
       transition: 1s; }
   .projects-entry .desc h3 {
     font-size: 16px;
-    margin-bottom: 25px;
     line-height: auto;
     font-weight: 500;
     text-transform: uppercase;
@@ -988,7 +998,6 @@ h2.bac-heading-us{
       text-decoration: none; }
   .projects-entry .desc span {
     display: block;
-    margin-bottom: 20px;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.4) !important;
     text-transform: uppercase;
@@ -1147,17 +1156,17 @@ h2.bac-heading-us{
   font-weight: 400;
   text-decoration: underline; }
 
-#bac-counter {
+#bac-parallax {
   position: relative;
   clear: both;
   margin-bottom: 5em; }
 
-.bac-counters {
+.bac-parallax {
   padding: 9em 0;
   background-size: cover;
   background-attachment: fixed;
   background-position: center center; }
-  .bac-counters .overlay {
+  .bac-parallax .overlay {
     z-index: 0;
     position: absolute;
     bottom: 0;
@@ -1165,13 +1174,13 @@ h2.bac-heading-us{
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.4); }
-  .bac-counters .icon {
+  .bac-parallax .icon {
     width: 100px;
     height: 100px;
     display: table;
     margin: 0 auto;
     margin-bottom: 20px; }
-    .bac-counters .icon i {
+    .bac-parallax .icon i {
       display: table-cell;
       vertical-align: middle;
       width: 100px;
@@ -1183,9 +1192,9 @@ h2.bac-heading-us{
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
       border-radius: 50%; }
-  .bac-counters .counter-wrap {
+  .bac-parallax .parallax-wrap {
     border: 1px solid red !important; }
-  .bac-counters .bac-counter {
+  .bac-parallax .bac-parallax {
     font-size: 40px;
     display: block;
     color: white;
@@ -1193,7 +1202,7 @@ h2.bac-heading-us{
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
-  .bac-counters .bac-counter-label {
+  .bac-parallax .bac-parallax-label {
     color: rgba(255, 255, 255, 1);
     text-transform: uppercase;
     font-size: 1.5em;
@@ -1201,16 +1210,16 @@ h2.bac-heading-us{
     margin-bottom: 2em;
     display: block; }
 
-#bac-counter1 {
+#bac-parallax1 {
   position: relative;
   clear: both; }
 
-.bac-counters1 {
+.bac-parallax1 {
   padding: 13em 0;
   background-size: cover;
   background-attachment: fixed;
   background-position: bottom center; }
-  .bac-counters1 .overlay {
+  .bac-parallax1 .overlay {
     z-index: 0;
     position: absolute;
     bottom: 0;
@@ -1218,13 +1227,13 @@ h2.bac-heading-us{
     left: 0;
     right: 0;
     background: rgba(0, 0, 0, 0.4); }
-  .bac-counters1 .icon {
+  .bac-parallax1 .icon {
     width: 100px;
     height: 100px;
     display: table;
     margin: 0 auto;
     margin-bottom: 20px; }
-    .bac-counters1 .icon i {
+    .bac-parallax1 .icon i {
       display: table-cell;
       vertical-align: middle;
       width: 100px;
@@ -1236,9 +1245,9 @@ h2.bac-heading-us{
       -moz-border-radius: 10%;
       -ms-border-radius: 10%;
       border-radius: 10%; }
-  .bac-counters1 .counter-wrap {
+  .bac-parallax1 .parallax-wrap {
     border: 1px solid red !important; }
-  .bac-counters1 .bac-counter {
+  .bac-parallax1 .bac-parallax {
     font-size: 40px;
     display: block;
     color: white;
@@ -1246,7 +1255,7 @@ h2.bac-heading-us{
     width: 100%;
     font-weight: 700;
     margin-bottom: .3em; }
-  .bac-counters1 .bac-counter-label {
+  .bac-parallax1 .bac-parallax-label {
     color: rgba(255, 255, 255, 1);
     text-transform: uppercase;
     font-size: 1.5em;
@@ -1621,13 +1630,11 @@ h2.bac-heading-us{
     .row-bottom-padded-sm {
       padding-bottom: 1em; } }
 
-
-
 .col-padding {
   padding: 10px !important; }
 
 .js .animate-box {
-  opacity: 0; }
+  opacity: 1; }
 
 #sticky_item {
   overflow: hidden;
@@ -1648,6 +1655,7 @@ h2.bac-heading-us{
   padding: 20px 3vw !important; }
   #quienes p{
     font-size: 1.4em;
+    text-align: justify;
     font-family: "Trebuchet MS", "overpass", Helvetica !important; }
   @media screen and (max-width: 1300px){
     #quienes{
@@ -1782,11 +1790,12 @@ svg {
   padding: 0em;
   margin: 0 !important; }
 
+
 .linked .project{
-  min-width: 150px;
-  min-height: 150px;
-  width: 12vw;
-  height: 12vw;
+  min-width: 165px;
+  min-height: 165px;
+  width: 165px;
+  height: 165px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 15px;
@@ -1808,16 +1817,24 @@ svg {
   border: 2px #ddd solid;
   border-radius: 50%;
   padding: 8px;
-  font-size: 1.8vw; }
+  font-size: 1.9em; }
 .linked .project .desc .con span{
-  margin-top: 20px;
+  margin-top: 70px;
   text-align: center;
-  line-height: 1.2;
-  font-size: 1.1em;}
+  line-height: 1;
+  font-size: 1.2em; }
+@media screen and (max-width: 768px){
+.linked .project .desc .con{
+  top: 120px; }
+.linked .project .desc .con a i{
+  border: none;
+  font-size: 1em; }
+.linked .project .desc .con span{
+  font-size: 1em;
+  margin-top: -42px; } }
+
 .linked h4{
   font-size: 1.6em;
   font-weight: 900;
   font-family: 'brown-thin';
   text-align: center; }
-.asd{
-  background-image: url(images/cat 1.jpg); }
