--- a/css/style.css
+++ b/css/style.css
@@ -981,7 +981,8 @@ h2.bac-heading-us{
   .up{
     letter-spacing: 0px; }
   .line::after{
-    height: 70px; } }
+    height: 70px;
+    border-bottom: 8px solid; } }
 
 .projects-entry a{
   filter: grayscale(100%);
