--- a/css/style.css
+++ b/css/style.css
@@ -983,7 +983,8 @@ h2.bac-heading-us{
   .up{
     letter-spacing: 0px; }
   .line::after{
-    height: 40px;
+    height: 34px;
+    width: 80px;
     border-bottom: 8px solid; } }
 
 .projects-entry a{
